cambios en la seccion about me y version mobile

--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -70,7 +70,7 @@
 
 @media (width < 800px) {
     .projects::before {
-        clip-path: polygon(0 0, 100% 0, 100% 8%, 0 8%);
+        clip-path: polygon(0 0, 0 0, 0 0, 0 0);
     }
 
     .projects::after {
