--- a/src/components/About-me/AboutMe.module.css
+++ b/src/components/About-me/AboutMe.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: grid;
     place-items: center;
-    padding: 80px 0 80px 0;
+    padding: 80px 0 0 0;
     background: var(--bg-content);
 }
 
@@ -67,18 +67,54 @@
 }
 
 ._tooltip {
+    width: 50%;
+    max-height: 234px;
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 }
 
-._tooltip p {
-    font-size: var(--font-size-subtitle);
-    font-weight: bold;
-    text-align: center;
+._selection {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
 }
 
+._button {
+    height: 25px;
+    border: none;
+    font-size: var(--font-size-subtitle);
+    color: var(--text-content);
+    font-weight: bold;
+    text-align: center;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+._button_active {
+    height: 25px;
+    border: none;
+    font-size: var(--font-size-subtitle);
+    color: var(--text-content);
+    font-weight: bold;
+    text-align: center;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    border-bottom: solid 2px black;
+    background-color: transparent;
+    color: black
+}
+
+
+._button:hover {
+    border-bottom: solid 2px black;
+    background-color: transparent;
+    color: black
+}
 
 ._habilities {
     width: 100%;
@@ -89,6 +125,27 @@
     justify-content: center;
     align-content: center;
     flex-wrap: wrap;
+}
+
+._training {
+    width: 100%;
+    height: auto;
+    display: flex;
+    gap: 2px;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    text-align: center;
+    flex-wrap: wrap;
+}
+
+._training p {
+    font-size: var(--font-size-content);
+    color: var(--text-content);
+}
+
+._training p:nth-child(odd) {
+    font-weight: bold;
 }
 
 ._habilities span {
@@ -109,15 +166,11 @@
     }
 
     .about::before {
-        clip-path: polygon(0 0, 100% 0, 100% 10%, 0 10%);
+        clip-path: polygon(0 0, 100% 0, 100% 7%, 0 7%);
     }
 
     .about::after {
-        clip-path: polygon(0 92%, 100% 92%, 100% 100%, 0 100%);
-    }
-
-    .about::after {
-        clip-path: polygon(0 92%, 100% 92%, 100% 100%, 0 100%);
+        clip-path: polygon(0 0%, 0% 0%, 0% 0%, 0 0%);
     }
 
     ._description {
@@ -133,10 +186,15 @@
         margin-bottom: 12px;
     }
 
-    ._tooltip p {
-        margin-bottom: 24px;
-
+    ._tooltip {
+        width: 100%;
+        margin-bottom: 40px;
     }
+
+    ._training p {
+        text-align: center;
+    }
+
 }
 
 @media (width=1366px) {
@@ -218,9 +276,5 @@
 
     ._habilities {
         width: 500px;
-    }
-
-    ._tooltip p {
-        margin-bottom: 24px;
     }
 }
