--- a/src/components/shared/Header/Header.module.css
+++ b/src/components/shared/Header/Header.module.css
@@ -43,8 +43,17 @@
 
 }
 
-@media (min-width: 800px) {
+@media (width < 800px) {
+    .header__nav {
+        position: relative;
+    }
+
+
+}
+
+@media (width > 800px) {
     .header__nav ul {
+
         justify-content: flex-end;
         margin-right: 100px;
     }
